@@ -1,6 +1,6 @@
 Package: MTurkR
-Version: 0.6.9
-Date: 2015-09-19
+Version: 0.6.10
+Date: 2015-10-18
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
                     email = "thosjleeper@gmail.com"),
