@@ -21,9 +21,8 @@ function (hit = NULL,
         toprint <- HITs[, c("HITId", "HITReviewStatus", "NumberOfAssignmentsPending", 
                             "NumberOfAssignmentsAvailable",
                             "NumberOfAssignmentsCompleted", "Expiration")]
-        names(toprint) <- c("HITId", "Review Status", "Assignments Pending", 
-                            "Assignments Available", "Assignments Completed",
-                            "Expiration")
+        names(toprint) <- c("HITId", "ReviewStatus", "Pending", 
+                            "Available", "Completed", "Expiration")
     } else {
         if(!is.null(hit.type)) {
             if(is.factor(hit.type))
@@ -35,23 +34,30 @@ function (hit = NULL,
             HITs <- HITs[HITs$RequesterAnnotation %in% annotation, ]
         }
         if(dim(HITs)[1] == 0) {
-            message("No HITs found!")
-            return(invisible(NULL))
+            warning("No HITs found!")
+            toprint <- data.frame(HITId = character(),
+                                  ReviewStatus = character(),
+                                  Pending = character(),
+                                  Available = character(),
+                                  Completed = character(),
+                                  Expiration = character(), stringsAsFactors = FALSE)
+            return(invisible(toprint))
         }
-        toprint <- HITs[,c( "HITId","HITReviewStatus","NumberOfAssignmentsPending",
-                                "NumberOfAssignmentsAvailable",
-                                "NumberOfAssignmentsCompleted", "Expiration")]
+        toprint <- HITs[,c("HITId","HITReviewStatus","NumberOfAssignmentsPending",
+                           "NumberOfAssignmentsAvailable",
+                           "NumberOfAssignmentsCompleted", "Expiration")]
         if(dim(HITs)[1] > 1) {
             totals <- data.frame(HITId = c( "------------------------------", "Totals"),
-                                HITReviewStatus = c("---------------",""),
-                                NumberOfAssignmentsPending = c("--------------------",
-                                    sum(as.numeric(HITs$NumberOfAssignmentsPending))),
-                                NumberOfAssignmentsAvailable = c("------------------",
-                                    sum(as.numeric(HITs$NumberOfAssignmentsAvailable))),
-                                NumberOfAssignmentsCompleted = c("--------------------",
-                                    sum(as.numeric(HITs$NumberOfAssignmentsCompleted))),
-                                Expiration = c("----------",""))
-            toprint <- rbind(toprint,totals)
+                                 HITReviewStatus = c("---------------",""),
+                                 NumberOfAssignmentsPending = c("--------------------",
+                                     sum(as.numeric(HITs$NumberOfAssignmentsPending))),
+                                 NumberOfAssignmentsAvailable = c("------------------",
+                                     sum(as.numeric(HITs$NumberOfAssignmentsAvailable))),
+                                 NumberOfAssignmentsCompleted = c("--------------------",
+                                     sum(as.numeric(HITs$NumberOfAssignmentsCompleted))),
+                                 Expiration = c("----------",""))
+            toprint <- setNames(rbind(toprint,totals), c("HITId", "ReviewStatus", "Pending", 
+                                                         "Available", "Completed", "Expiration"))
         }
     }
     print(toprint, row.names = FALSE)
