@@ -2,6 +2,7 @@
 
 ## SIGNIFICANT USER-VISIBILE CHANGES ##
 
+* `HITStatus()` now reports condensed column names better suited for narrow displays.
 * Correctly handle multiple `response.group` arguments passed to HIT-related functions. (#89)
 * Closing the graphical wizard crashed RStudio due to `bringToTop(-1)`. This is fixed. (h/t Carolina Kuepper-Tetzel)
 * `authenticate`, which was deprecated in v0.5, is removed.
